--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-slick": "^0.23.1",
+    "react-twitter-widgets": "^1.7.1",
     "resolve": "1.6.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "0.19.0",
