--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-jest": "20.0.3",
     "babel-loader": "^7.1.5",
     "babel-preset-react-app": "^3.1.1",
+    "babel-register": "^6.26.0",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -39,6 +40,7 @@
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-sitemap": "^1.1.4",
     "react-slick": "^0.23.1",
     "react-twitter-widgets": "^1.7.1",
     "resolve": "1.6.0",
