--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-slick": "^0.23.1",
     "react-twitter-widgets": "^1.7.1",
     "resolve": "1.6.0",
+    "scroll-out": "^2.2.3",
     "slick-carousel": "^1.8.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
