--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-share": "^2.3.1",
     "react-slick": "^0.23.1",
     "react-twitter-widgets": "^1.7.1",
     "resolve": "1.6.0",
