--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "20.0.4",
     "node-sass-chokidar": "^1.3.4",
     "object-assign": "4.1.1",
+    "particlesjs": "^2.2.3",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
@@ -38,6 +39,7 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-particles-js": "^2.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-share": "^2.3.1",
