--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "3.0.0",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
@@ -101,6 +100,7 @@
   },
   "devDependencies": {
     "react-helmet": "^5.2.0",
-    "react-snap": "^1.23.0"
+    "react-snap": "^1.23.0",
+    "webpack-dev-server": "3.0.0"
   }
 }
