--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Tackt",
-  "name": "Tackt Portfolio",
+  "name": "Takuto Mitsuhashi Portfolio Website",
   "icons": [
     {
       "src": "favicon.ico",
@@ -11,5 +11,7 @@
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#2FD0E9",
+  "lang": "ja-jp",
+  "description": "三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。フリーランスWebエンジニア。Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。"
 }
