--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.13",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "react": "^16.8.6",
