--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@fullpage/react-fullpage": "^0.1.13",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "react": "^16.8.6",
@@ -12,7 +11,8 @@
     "react-particles-js": "^2.5.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "react-slick": "^0.23.2"
   },
   "scripts": {
     "start": "react-scripts start",
