--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "routine": "sh routine.sh",
     "deploy": "sh deploy.sh",
     "build": "react-scripts build",
     "postbuild": "react-snap"
