--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.2",
+    "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "@types/jest": "^24.0.24",
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "react-snap": "^1.23.0"
+    "react-scripts": "^3.3.0",
+    "react-snap": "^1.23.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
