--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "@types/react-dom": "^16.9.7",
     "@types/react-router-dom": "^5.1.5",
     "bulma": "^0.8.2",
-    "node-sass": "^4.14.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "react-snap": "^1.23.0",
-    "typescript": "^3.8.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.10",
-    "prettier": "^2.0.5"
+    "node-sass": "^4.14.0",
+    "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-grid-system": "^7.0.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "react-snap": "^1.23.0",
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
