--- a/.eslintrc
+++ b/.eslintrc
@@ -5,16 +5,11 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended"
-    // Uncomment the following lines to enable eslint-config-prettier
-    // Is not enabled right now to avoid issues with the Next.js repo
-    // "prettier",
-    // "prettier/@typescript-eslint"
   ],
   "env": {
     "es6": true,
     "browser": true,
-    "jest": true,
-    "node": true
+    "jest": true
   },
   "rules": {
     "react/react-in-jsx-scope": 0,
