--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
   "name": "tackt",
   "homepage": "https://tackt-m.com/",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^26.0.17",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.5",
-    "bulma": "^0.9.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-react": "^7.19.0",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.0.10",
-    "node-sass": "^5.0.0",
-    "prettier": "^2.0.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-grid-system": "^7.0.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.1",
+    "@chakra-ui/react": "^1.6.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-router-dom": "^5.1.7",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.24.0",
+    "framer-motion": "^4",
+    "husky": "^7.0.0",
+    "lint-staged": "^10.0.0",
+    "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-grid-system": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-snap": "^1.23.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.3.5"
   },
   "husky": {
     "hooks": {
