--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,5 +13,5 @@
   "theme_color": "#000000",
   "background_color": "#2FD0E9",
   "lang": "ja-jp",
-  "description": "三橋拓人のポートフォリオサイトです。個人プロジェクトにおけるポートフォリオを掲載しています。フリーランスWebエンジニア。Webに関わるご相談やサイト制作はお任せ下さい。Webサイト制作のお悩み全てに対応いたします。"
+  "description": "三橋拓人のポートフォリオサイトです。個人開発等のポートフォリオを掲載しております。"
 }
